# Rune-API-Client

./: .gitignore  CHANGELOG.md  README.md  RELEASE_NOTES.md  app-name-suggestions.json  eslint.config.js  index.html  package-lock.json  package.json  test-data.json  tsconfig.json  vite.config.ts
.github/: CONTRIBUTING.md  dependabot.yml  pull_request_template.md
.github/workflows/: README.md  lint.yml  publish-wiki.yml  quality.yml  release.yml  security-audit.yml
.husky/: README.md  commit-msg  pre-commit  pre-push
doc/: README.md  WIKI-SETUP.md
doc/features/: UC001-Header-Autocomplete.md  UC002-Header-Presets.md  UC003-Auto-Generated-Headers.md  UC004-Override-Headers.md  UC005-Bulk-Edit.md  UC006-Header-Description.md
doc/wiki/: Architecture.md  Guide-de-demarrage.md  Home.md  UC-001-Autocompletion-Headers.md  UC-002-Header-Presets.md  UC-003-Headers-Auto-Generes.md  UC-004-Override-Headers.md  UC-005-Bulk-Edit.md  UC-006-Description-Headers.md  _Sidebar.md
docs/: index.html
scripts/: generate-icons.js  package.json  publish-wiki.js  publish-wiki.sh
src/: App.vue  main.ts
src-tauri/: Cargo.toml  clippy.toml  justfile  rustfmt.toml  tauri.conf.json
src-tauri/.cargo/: audit.toml  config.toml
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/database/: commands.rs  mod.rs  models.rs
src/assets/: styles.css
src/components/: UpdateChecker.vue
src/i18n/: index.ts
src/stores/: app.original.ts  app.ts  headerPresets.ts  history.original.ts  history.ts  request.ts
src/types/: index.ts
tests/: README.md
(+30 files in other folders)
